Fix vertical spacing issues in all sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@ html {
   scroll-behavior: smooth;
 }
 
+main {
+  margin-top: 0px;
+}
+
 h2 {
   vertical-align: center;
   text-align: center;
@@ -23,7 +27,6 @@ h2 {
 html,
 body {
   margin: 0;
-  height: 100%;
 }
 
 * {
@@ -55,6 +58,10 @@ body {
 
 .top-nav a:hover {
   color: #da48a4;
+}
+
+section {
+  scroll-margin-top: 49px;
 }
 
 .menu {
@@ -178,7 +185,7 @@ body {
 .hero {
   position: relative;
   width: 100%;
-  height: 90%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -190,8 +197,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  padding-top: 50px;
+  height: 100vh;
   background: url(../images/blue-courts-nets.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -246,7 +252,6 @@ body {
 #about-us {
   width: 100%;
   min-height: 100vh;
-  padding-top: 80px;
 }
 
 
@@ -297,9 +302,9 @@ body {
 }
 
 hr.gradient {
-  height: 3px;
+  height: 5px;
   border: none;
-  border-radius: 6px;
+  margin: 0;
   background: linear-gradient(
     90deg,
     rgba(69,103,123, 1) 0%,
@@ -312,8 +317,7 @@ hr.gradient {
 
 #schedule-and-prices {
   width: 100%;
-  height: 100%;
-  padding-top: 50px;
+  height: 100vh;
 }
 
 #schedule-container {
@@ -360,8 +364,7 @@ hr.gradient {
 
 #latest-news {
   width: 100%;
-  height: 100%;
-  padding-top: 50px;
+  height: 100vh;
 }
 
 #latest-news p {
@@ -389,14 +392,14 @@ hr.gradient {
 /* footer */
 
 footer {
-  height: 150px;
+  height: 15vh;
 }
 
 footer ul {
   list-style: none;
   text-align: center;
   display: flex;
-  padding: 25px;
+  padding: 20px;
   justify-content: center;
   justify-content: space-around;
   background-color: #45677b;
@@ -422,10 +425,10 @@ footer ul i:hover {
 }
 
 #form-container {
-  height: 108%;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 100px;
 }
 
 #title-Tag-Line {
